invalidate cache when needed for vsc - and add a first test for operator strategies
Signed-off-by: VIDAL Didier (Externe) <didier.vidal_externe@rte-france.com>